# euler-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
problems/: .gitkeep  example.rs
solutions/: .gitkeep
src/: main.rs
