[package]
name = "euler-rs"
version = "0.1.0"
authors = ["Omar Abbasi"]
license = "MIT OR Apache-2.0"
description = "A command line tool for solving Project Euler problems in Rust"
homepage = "https://github.com/abbasio/euler-rs"
repository = "https://github.com/abbasio/euler-rs"
readme = "README.md"
keywords = ["cli", "euler", "math", "puzzle"]
categories = ["command-line-utilities", "mathematics"]

[dependencies]
aho-corasick = "1.1.3"
codegen = "0.1.3"
scraper = "0.20.0"
html2text = "0.12.5"
reqwest = { version = "0.12.7", features = ["blocking"] }
clap = { version = "4.0", features = ["derive"] }
